--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                card_view:cardBackgroundColor="@color/blue_dark" >
+                card_view:cardBackgroundColor="@color/blue_dark"
+                card_view:cardCornerRadius="10dp" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -82,7 +83,8 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
                 android:layout_weight="1"
-                card_view:cardBackgroundColor="@color/pinkdark" >
+                card_view:cardBackgroundColor="@color/pinkdark"
+                card_view:cardCornerRadius="10dp" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
