--- a/res/layout/base_layout.xml
+++ b/res/layout/base_layout.xml
@@ -38,6 +38,7 @@
             android:orientation="vertical" >
 
             <ProgressBar
+                android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:indeterminate="true" />
@@ -46,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Loading..."
-                android:textColor="@color/black"
+                android:textColor="@color/pink"
                 android:textSize="20sp"
                 custom:fonttype="trebuchet_ms" />
         </LinearLayout>
