--- a/res/layout/activity_regsiter.xml
+++ b/res/layout/activity_regsiter.xml
@@ -70,6 +70,7 @@
                 android:ellipsize="marquee"
                 android:fadingEdge="horizontal"
                 android:gravity="center"
+                android:visibility="gone"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:padding="5dp"
                 android:scrollHorizontally="true"
@@ -96,6 +97,7 @@
                 android:padding="5dp"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
+                android:visibility="gone"
                 android:text="@string/google"
                 android:textColor="@color/white"
                 android:textSize="16sp"
