--- a/res/layout/activity_search_results.xml
+++ b/res/layout/activity_search_results.xml
@@ -33,13 +33,37 @@
             android:textSize="12sp"
             custom:fonttype="trebuchet_ms" />
 
-        <ListView
-            android:id="@+id/listView"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="@color/transparent"
-            android:dividerHeight="2dp"
-            android:scrollbars="none" />
+            android:orientation="vertical" >
+
+            <com.utils.CustomTextView
+                android:id="@+id/btnSelectSubProductCategory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                android:background="@drawable/blue_button_selector"
+                android:drawableEnd="@drawable/ic_arrow_down_"
+                android:drawableRight="@drawable/ic_arrow_down_"
+                android:gravity="center_vertical"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:padding="8dp"
+                android:singleLine="true"
+                android:text="@string/select_product_sub_category"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                custom:fonttype="trebuchet_ms" />
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@color/transparent"
+                android:dividerHeight="2dp"
+                android:scrollbars="none" />
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
