--- a/res/layout/sliding_left_menu.xml
+++ b/res/layout/sliding_left_menu.xml
@@ -1,24 +1,24 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@drawable/slider_gradient" >
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:scrollbars="none" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:orientation="vertical" >
 
             <LinearLayout
                 android:id="@+id/layouLogin"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:gravity="center_horizontal"
@@ -38,7 +38,7 @@
 
                 <com.utils.CustomTextView
                     android:id="@+id/txtLoginUserName"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:clickable="true"
@@ -56,7 +56,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnLogin"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@drawable/custom_button_selector"
@@ -75,7 +75,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnHome"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@drawable/custom_button_selector"
@@ -94,7 +94,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnPostAd"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@drawable/custom_button_selector"
@@ -113,7 +113,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnSearchProducts"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@drawable/custom_button_selector"
@@ -132,7 +132,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnAboutUs"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@drawable/custom_button_selector"
@@ -151,7 +151,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnHelp"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@drawable/custom_button_selector"
@@ -170,7 +170,7 @@
 
             <LinearLayout
                 android:id="@+id/helpLayout"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:layout_marginLeft="20dp"
