--- a/res/layout/activity_adress_documents.xml
+++ b/res/layout/activity_adress_documents.xml
@@ -1,24 +1,24 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
     android:padding="5dp" >
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:scrollbars="none" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
@@ -30,7 +30,7 @@
                 custom:fonttype="trebuchet_ms" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -43,7 +43,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -72,7 +72,7 @@
 
                     <EditText
                         android:id="@+id/editAddress"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:inputType="text"
                         android:padding="3dp"
@@ -82,7 +82,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -95,7 +95,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -124,7 +124,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/btnSelectCity"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:background="@drawable/blue_button_selector"
@@ -142,7 +142,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -155,7 +155,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -184,7 +184,7 @@
 
                     <EditText
                         android:id="@+id/editState"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:inputType="text"
                         android:padding="3dp"
@@ -194,7 +194,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -207,7 +207,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -236,7 +236,7 @@
 
                     <EditText
                         android:id="@+id/editPincode"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
                         android:maxLength="6"
@@ -247,7 +247,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -260,7 +260,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -289,7 +289,7 @@
 
                     <EditText
                         android:id="@+id/editPhone"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:inputType="phone"
                         android:maxLength="10"
@@ -300,7 +300,7 @@
             </LinearLayout>
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
@@ -313,7 +313,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnPanCard"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
                 android:layout_margin="5dp"
@@ -331,7 +331,7 @@
 
             <LinearLayout
                 android:id="@+id/layoutPanCard"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/blue_button_selector"
                 android:gravity="center"
@@ -350,7 +350,7 @@
 
                 <EditText
                     android:id="@+id/editPanCard"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
                     android:maxLength="10"
@@ -359,7 +359,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnAadharCard"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
                 android:layout_margin="5dp"
@@ -377,7 +377,7 @@
 
             <LinearLayout
                 android:id="@+id/layoutAadharCard"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/blue_button_selector"
                 android:gravity="center"
@@ -396,7 +396,7 @@
 
                 <EditText
                     android:id="@+id/editAadharName"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
                     android:inputType="text"
@@ -413,10 +413,75 @@
 
                 <EditText
                     android:id="@+id/editAadharNumber"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionDone"
                     android:inputType="number"
+                    android:maxLength="12"
+                    android:padding="3dp"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+            <com.utils.CustomTextView
+                android:id="@+id/btnDrivingLicense"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_margin="5dp"
+                android:drawableLeft="@drawable/btn_unselect"
+                android:drawablePadding="5dp"
+                android:drawableStart="@drawable/btn_unselect"
+                android:gravity="center_vertical"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:padding="10dp"
+                android:singleLine="true"
+                android:text="@string/driving_license"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                custom:fonttype="trebuchet_ms" />
+
+            <LinearLayout
+                android:id="@+id/layoutDrivingLicense"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/blue_button_selector"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:visibility="gone" >
+
+                <com.utils.CustomTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/driving_license"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    custom:fonttype="trebuchet_ms" />
+
+                <EditText
+                    android:id="@+id/editDrivingLicense"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
+                    android:inputType="number"
+                    android:textSize="15sp" />
+
+                <com.utils.CustomTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/state"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    custom:fonttype="trebuchet_ms" />
+
+                <EditText
+                    android:id="@+id/editDrivingState"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionDone"
+                    android:inputType="text"
                     android:maxLength="12"
                     android:padding="3dp"
                     android:textSize="15sp" />
