--- a/res/layout/activity_product_details.xml
+++ b/res/layout/activity_product_details.xml
@@ -1,52 +1,52 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
     android:padding="5dp" >
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:scrollbars="none" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="fill_parent"
                     android:layout_weight="1"
                     android:background="#55000000"
                     android:orientation="vertical" >
 
                     <com.utils.SquareImageView
                         android:id="@+id/itemProduct"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
                         android:scaleType="centerCrop"
                         android:src="@drawable/default_loading" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="fill_parent"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:orientation="vertical" >
 
                     <EditText
                         android:id="@+id/editTextQuantity"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="top"
                         android:layout_margin="5dp"
@@ -56,7 +56,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/btnRentProduct"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom|center_horizontal"
                         android:layout_margin="5dp"
@@ -76,7 +76,7 @@
             </LinearLayout>
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
@@ -88,7 +88,7 @@
                 custom:fonttype="trebuchet_ms" />
             
              <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -101,7 +101,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -130,7 +130,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/txtProductTitle"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -141,7 +141,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -154,7 +154,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -183,7 +183,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/txtProductName"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -194,7 +194,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -207,7 +207,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -236,7 +236,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/txtCategoryName"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -247,7 +247,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
@@ -261,7 +261,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -289,7 +289,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/txtYearOfPurchase"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -300,7 +300,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
@@ -314,7 +314,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -343,7 +343,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/txtMonthOfPurchase"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -354,7 +354,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -367,7 +367,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -396,7 +396,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/txtQuantity"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -407,7 +407,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -419,7 +419,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:padding="3dp"
                         android:text="@string/product_condition"
@@ -455,7 +455,7 @@
                     
                     <com.utils.CustomTextView
                         android:id="@+id/txtRating"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -467,13 +467,13 @@
 
             <LinearLayout
                 android:id="@+id/rootFieldsValues"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
             </LinearLayout>
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:background="#55000000"
@@ -485,7 +485,7 @@
 
             <LinearLayout
                 android:id="@+id/layoutDailyCost"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -498,7 +498,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -527,7 +527,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/txtDailyCost"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -539,7 +539,7 @@
 
             <LinearLayout
                 android:id="@+id/layoutWeekCost"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
@@ -553,7 +553,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -582,7 +582,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/txtWeekCost"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -594,7 +594,7 @@
 
             <LinearLayout
                 android:id="@+id/layoutMonthCost"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
@@ -608,7 +608,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -637,7 +637,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/txtMonthCost"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -648,7 +648,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -661,7 +661,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -690,7 +690,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/txtSecurityDeposit"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -701,7 +701,7 @@
             </LinearLayout>
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:background="#55000000"
@@ -712,7 +712,7 @@
                 custom:fonttype="trebuchet_ms" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
@@ -725,7 +725,7 @@
                     android:orientation="vertical" >
 
                     <com.utils.CustomTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:padding="3dp"
@@ -754,7 +754,7 @@
 
                     <com.utils.CustomTextView
                         android:id="@+id/txtLocationName"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="marquee"
                         android:fadingEdge="horizontal"
