--- a/res/layout/activity_regsiter.xml
+++ b/res/layout/activity_regsiter.xml
@@ -1,20 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
     android:padding="5dp" >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <com.utils.CustomTextView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|top"
             android:layout_margin="10dp"
@@ -31,7 +31,7 @@
 
         <com.utils.CustomTextView
             android:id="@+id/txtMessage"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|top"
             android:layout_margin="10dp"
@@ -47,19 +47,19 @@
     </LinearLayout>
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:scrollbars="none" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="vertical" >
 
             <com.utils.CustomTextView
                 android:id="@+id/btnSignUpFb"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
@@ -82,7 +82,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnSignupGoogle"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
@@ -105,7 +105,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnSignUpEmail"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
@@ -125,14 +125,14 @@
 
             <LinearLayout
                 android:id="@+id/commonLayout"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:visibility="gone" >
 
                 <com.utils.CustomTextView
                     android:id="@+id/btnSelectUserType"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start|center_vertical"
                     android:layout_margin="5dp"
@@ -150,7 +150,7 @@
 
                 <EditText
                     android:id="@+id/displayName"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:hint="@string/display_name"
@@ -158,7 +158,7 @@
 
                 <EditText
                     android:id="@+id/emailId"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:hint="@string/enter_email_id"
@@ -166,7 +166,7 @@
 
                 <EditText
                     android:id="@+id/password"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:hint="@string/enter_password"
@@ -174,7 +174,7 @@
 
                 <com.utils.CustomTextView
                     android:id="@+id/btnSelectCountry"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start|center_vertical"
                     android:layout_margin="5dp"
@@ -192,7 +192,7 @@
 
                 <EditText
                     android:id="@+id/mobileNumber"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:hint="@string/enter_mobile_number"
@@ -200,7 +200,7 @@
 
                 <EditText
                     android:id="@+id/editPanCard"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/enter_pan_card_number"
                     android:inputType="text"
@@ -209,7 +209,7 @@
 
                 <CheckBox
                     android:id="@+id/checkTerms"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:checked="false"
