--- a/res/layout/addresslayout.xml
+++ b/res/layout/addresslayout.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
     <EditText
         android:id="@+id/editAddress"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:hint="@string/enter_address"
@@ -20,7 +20,7 @@
 
     <com.utils.CustomTextView
         android:id="@+id/btnSelectCity"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_margin="5dp"
@@ -38,7 +38,7 @@
 
     <EditText
         android:id="@+id/editState"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:hint="@string/enter_state"
@@ -49,7 +49,7 @@
 
     <EditText
         android:id="@+id/editPincode"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:maxLength="6"
@@ -61,7 +61,7 @@
 
     <EditText
         android:id="@+id/editPhone"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:hint="@string/enter_phone_number"
