--- a/res/layout/itemtext.xml
+++ b/res/layout/itemtext.xml
@@ -2,7 +2,7 @@
 <com.utils.CustomTextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
     android:id="@+id/txtItem"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_margin="2dp"
