--- a/res/layout/layout_rental_periods.xml
+++ b/res/layout/layout_rental_periods.xml
@@ -1,18 +1,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/layoutPerDay"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <com.utils.CustomTextView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
@@ -25,7 +25,7 @@
 
         <EditText
             android:id="@+id/editPricePerDayRent"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:hint="@string/eg_in_between_1_the_price_of_purchase"
@@ -37,12 +37,12 @@
 
     <LinearLayout
         android:id="@+id/layoutPerThreeDay"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <com.utils.CustomTextView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
@@ -55,7 +55,7 @@
 
         <EditText
             android:id="@+id/editPricePerThreeDayRent"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:hint="@string/eg_in_between_1_the_price_of_purchase"
@@ -67,12 +67,12 @@
 
     <LinearLayout
         android:id="@+id/layoutPerWeek"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <com.utils.CustomTextView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
@@ -85,7 +85,7 @@
 
         <EditText
             android:id="@+id/editPricePerWeekRent"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:hint="@string/eg_in_between_1_the_price_of_purchase"
@@ -97,12 +97,12 @@
 
     <LinearLayout
         android:id="@+id/layoutPerMonth"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <com.utils.CustomTextView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
@@ -115,7 +115,7 @@
 
         <EditText
             android:id="@+id/editPricePerMonthRent"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:hint="@string/eg_in_between_1_the_price_of_purchase"
@@ -127,12 +127,12 @@
 
     <LinearLayout
         android:id="@+id/layoutPerThreeMonth"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <com.utils.CustomTextView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
@@ -145,7 +145,7 @@
 
         <EditText
             android:id="@+id/editPriceThreeMonth"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:hint="@string/eg_in_between_1_the_price_of_purchase"
@@ -157,12 +157,12 @@
 
     <LinearLayout
         android:id="@+id/layoutPerSixMonth"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <com.utils.CustomTextView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
@@ -175,7 +175,7 @@
 
         <EditText
             android:id="@+id/editPriceSixMonth"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:hint="@string/eg_in_between_1_the_price_of_purchase"
@@ -187,12 +187,12 @@
 
     <LinearLayout
         android:id="@+id/layoutPerNineMonth"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <com.utils.CustomTextView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
@@ -205,7 +205,7 @@
 
         <EditText
             android:id="@+id/editPriceNineMonth"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:hint="@string/eg_in_between_1_the_price_of_purchase"
@@ -217,12 +217,12 @@
 
     <LinearLayout
         android:id="@+id/layoutPerTwelveMonth"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <com.utils.CustomTextView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
@@ -235,7 +235,7 @@
 
         <EditText
             android:id="@+id/editPriceTweleveMonth"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:hint="@string/eg_in_between_1_the_price_of_purchase"
