--- a/res/layout/post_ad_activity.xml
+++ b/res/layout/post_ad_activity.xml
@@ -1,27 +1,27 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:clickable="true"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
     android:padding="5dp" >
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:background="@color/transparent"
         android:clickable="true"
         android:scrollbars="none" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:background="#55000000"
@@ -32,7 +32,7 @@
                 custom:fonttype="trebuchet_ms" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:gravity="center_horizontal"
@@ -40,7 +40,7 @@
                 android:padding="10dp" >
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:padding="3dp"
@@ -51,7 +51,7 @@
 
                 <com.utils.CustomTextView
                     android:id="@+id/btnSelectProductCategory"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="5dp"
@@ -69,14 +69,14 @@
 
                 <LinearLayout
                     android:id="@+id/layoutSubCat"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:visibility="gone" >
 
                     <com.utils.CustomTextView
                         android:id="@+id/btnSelectSubProductCategory"
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_margin="5dp"
@@ -94,7 +94,7 @@
                 </LinearLayout>
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="2dp"
@@ -107,7 +107,7 @@
 
                 <EditText
                     android:id="@+id/editTitleAd"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:hint="@string/enter_title"
@@ -117,7 +117,7 @@
 
                 <com.utils.CustomTextView
                     android:id="@+id/btnUploadPhoto"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="5dp"
@@ -134,7 +134,7 @@
 
                 <HorizontalScrollView
                     android:id="@+id/scrollImages"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="200dp"
                     android:clickable="false"
                     android:focusable="false"
@@ -154,7 +154,7 @@
             </LinearLayout>
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:background="#55000000"
@@ -165,7 +165,7 @@
                 custom:fonttype="trebuchet_ms" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:gravity="center_horizontal"
@@ -173,7 +173,7 @@
                 android:padding="10dp" >
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="2dp"
@@ -186,7 +186,7 @@
 
                 <EditText
                     android:id="@+id/editShortDesc"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:hint="@string/enter_short_description"
@@ -195,7 +195,7 @@
                     android:textSize="14sp" />
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="2dp"
@@ -208,7 +208,7 @@
 
                 <com.utils.CustomTextView
                     android:id="@+id/btnSelectRating"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="5dp"
@@ -226,7 +226,7 @@
             </LinearLayout>
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:background="#55000000"
@@ -237,7 +237,7 @@
                 custom:fonttype="trebuchet_ms" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:gravity="center_horizontal"
@@ -245,7 +245,7 @@
                 android:padding="10dp" >
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="2dp"
@@ -258,7 +258,7 @@
 
                 <EditText
                     android:id="@+id/editInstructions"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:hint="@string/enter_instructions"
@@ -266,7 +266,7 @@
                     android:textSize="14sp" />
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="2dp"
@@ -279,7 +279,7 @@
 
                 <EditText
                     android:id="@+id/editStuff"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:hint="@string/enter_stuff"
@@ -290,14 +290,14 @@
 
             <LinearLayout
                 android:id="@+id/layoutControlTypeCapacity"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:visibility="gone" >
 
                 <com.utils.CustomTextView
                     android:id="@+id/txtFields"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:background="#55000000"
@@ -308,7 +308,7 @@
 
                 <LinearLayout
                     android:id="@+id/selectControls"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:gravity="center_horizontal"
@@ -319,7 +319,7 @@
             </LinearLayout>
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:background="#55000000"
@@ -330,7 +330,7 @@
                 custom:fonttype="trebuchet_ms" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:gravity="center_horizontal"
@@ -338,7 +338,7 @@
                 android:padding="10dp" >
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="2dp"
@@ -351,7 +351,7 @@
 
                 <EditText
                     android:id="@+id/editPricePurchased"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:hint="@string/enter_purchased_cost"
@@ -359,7 +359,7 @@
                     android:textSize="14sp" />
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="2dp"
@@ -371,7 +371,7 @@
                     custom:fonttype="trebuchet_ms" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal" >
 
@@ -413,7 +413,7 @@
                 </LinearLayout>
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="2dp"
@@ -426,7 +426,7 @@
 
                 <EditText
                     android:id="@+id/editQuantity"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:hint="@string/enter_quantity"
@@ -434,7 +434,7 @@
                     android:textSize="14sp" />
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="2dp"
@@ -447,7 +447,7 @@
 
                 <EditText
                     android:id="@+id/editSecurityDeposit"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:hint="@string/enter_security_deposit"
@@ -456,7 +456,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal" >
