--- a/res/layout/post_dates_activity.xml
+++ b/res/layout/post_dates_activity.xml
@@ -1,31 +1,31 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
     android:padding="5dp" >
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:scrollbars="none" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#55000000"
                 android:padding="5dp" >
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
                     android:layout_gravity="start|center_vertical"
                     android:padding="3dp"
                     android:text="@string/location_preferences"
@@ -51,13 +51,13 @@
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp" >
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
                     android:layout_gravity="start|center_vertical"
                     android:padding="3dp"
                     android:text="@string/in_my_location"
@@ -77,13 +77,13 @@
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp" >
 
                 <com.utils.CustomTextView
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="fill_parent"
                     android:layout_gravity="start|center_vertical"
                     android:padding="3dp"
                     android:text="@string/selected_cities"
@@ -103,13 +103,13 @@
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp" >
 
                 <com.utils.CustomTextView
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="fill_parent"
                     android:layout_gravity="start|center_vertical"
                     android:padding="3dp"
                     android:text="@string/anywhere"
@@ -129,15 +129,15 @@
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="#55000000"
                 android:padding="5dp" >
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
                     android:layout_gravity="start|center_vertical"
                     android:padding="3dp"
                     android:text="@string/calendar_preferences"
@@ -163,8 +163,8 @@
             </FrameLayout>
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:layout_gravity="start|center_vertical"
                 android:layout_margin="5dp"
                 android:gravity="center_vertical|start"
@@ -178,7 +178,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnStartDate"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
                 android:layout_margin="5dp"
@@ -193,7 +193,7 @@
                 custom:fonttype="trebuchet_ms" />
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
                 android:layout_margin="5dp"
@@ -208,7 +208,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnEndDate"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
                 android:layout_margin="5dp"
@@ -223,7 +223,7 @@
                 custom:fonttype="trebuchet_ms" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
