--- a/res/layout/post_documents.xml
+++ b/res/layout/post_documents.xml
@@ -1,24 +1,24 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
     android:padding="5dp" >
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:scrollbars="none" >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
@@ -30,13 +30,13 @@
                 custom:fonttype="trebuchet_ms" />
 
             <include
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 layout="@layout/addresslayout" />
 
             <CheckBox
                 android:id="@+id/checkAddress"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="3dp"
                 android:checked="true"
@@ -47,14 +47,14 @@
 
             <LinearLayout
                 android:id="@+id/layoutUserAddress"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:orientation="vertical"
                 android:visibility="gone" >
 
                 <com.utils.CustomTextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="5dp"
@@ -66,13 +66,13 @@
                     custom:fonttype="trebuchet_ms" />
 
                 <include
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     layout="@layout/addressuserlayout" />
             </LinearLayout>
 
             <com.utils.CustomTextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
@@ -85,7 +85,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnPanCard"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
                 android:layout_margin="5dp"
@@ -103,7 +103,7 @@
 
             <LinearLayout
                 android:id="@+id/layoutPanCard"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/blue_button_selector"
                 android:gravity="center"
@@ -122,7 +122,7 @@
 
                 <EditText
                     android:id="@+id/editPanCard"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
                     android:maxLength="10"
@@ -131,7 +131,7 @@
 
             <com.utils.CustomTextView
                 android:id="@+id/btnAadharCard"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
                 android:layout_margin="5dp"
@@ -149,7 +149,7 @@
 
             <LinearLayout
                 android:id="@+id/layoutAadharCard"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/blue_button_selector"
                 android:gravity="center"
@@ -168,7 +168,7 @@
 
                 <EditText
                     android:id="@+id/editAadharName"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
                     android:inputType="text"
@@ -185,7 +185,7 @@
 
                 <EditText
                     android:id="@+id/editAadharNumber"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionDone"
                     android:inputType="number"
@@ -194,8 +194,73 @@
                     android:textSize="15sp" />
             </LinearLayout>
 
+            <com.utils.CustomTextView
+                android:id="@+id/btnDrivingLicense"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_margin="5dp"
+                android:drawableLeft="@drawable/btn_unselect"
+                android:drawablePadding="5dp"
+                android:drawableStart="@drawable/btn_unselect"
+                android:gravity="center_vertical"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:padding="10dp"
+                android:singleLine="true"
+                android:text="@string/driving_license"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                custom:fonttype="trebuchet_ms" />
+
             <LinearLayout
-                android:layout_width="match_parent"
+                android:id="@+id/layoutDrivingLicense"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/blue_button_selector"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:visibility="gone" >
+
+                <com.utils.CustomTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/driving_license"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    custom:fonttype="trebuchet_ms" />
+
+                <EditText
+                    android:id="@+id/editDrivingLicense"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
+                    android:inputType="number"
+                    android:textSize="15sp" />
+
+                <com.utils.CustomTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/state"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    custom:fonttype="trebuchet_ms" />
+
+                <EditText
+                    android:id="@+id/editDrivingState"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionDone"
+                    android:inputType="text"
+                    android:maxLength="12"
+                    android:padding="3dp"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal" >
