--- a/res/layout/topbar.xml
+++ b/res/layout/topbar.xml
@@ -1,35 +1,26 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <FrameLayout
-            android:layout_width="match_parent"
+        <RelativeLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/slider_gradient" >
-
-            <com.utils.CustomTextView
-                android:id="@+id/txtTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/transparent"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="@string/app_name"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                custom:fonttype="trebuchet_ms" />
 
             <ImageView
                 android:id="@+id/btnMenu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical|start"
                 android:contentDescription="@string/app_name"
                 android:padding="10dp"
@@ -40,6 +31,9 @@
                 android:id="@+id/txtLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical|end"
                 android:background="@color/transparent"
                 android:drawableLeft="@drawable/location_share"
@@ -51,7 +45,24 @@
                 android:textSize="13sp"
                 android:visibility="gone"
                 custom:fonttype="trebuchet_ms" />
-        </FrameLayout>
+
+            <com.utils.CustomTextView
+                android:id="@+id/txtTitle"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/btnMenu"
+                android:layout_toLeftOf="@id/txtLocation"
+                android:layout_toRightOf="@id/btnMenu"
+                android:layout_toStartOf="@id/txtLocation"
+                android:background="@color/transparent"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="@string/app_name"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                custom:fonttype="trebuchet_ms" />
+        </RelativeLayout>
     </LinearLayout>
 
 </FrameLayout>
