--- a/res/layout/post_documents.xml
+++ b/res/layout/post_documents.xml
@@ -236,7 +236,8 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
-                    android:inputType="number"
+                    android:maxLength="16"
+                    android:inputType="text"
                     android:textSize="15sp" />
 
                 <com.utils.CustomTextView
@@ -254,7 +255,6 @@
                     android:layout_height="wrap_content"
                     android:imeOptions="actionDone"
                     android:inputType="text"
-                    android:maxLength="12"
                     android:padding="3dp"
                     android:textSize="15sp" />
             </LinearLayout>
